--- a/STYLES.css
+++ b/STYLES.css
@@ -5,6 +5,10 @@
     box-sizing: border-box;
 }
 
+.body {
+    width: 100vw;
+}
+
 .barra-navegacao {
     backdrop-filter: blur(15px);
     background: rgba(255, 255, 255, .15);
@@ -25,13 +29,10 @@
 }
 
 .menu-navegacao {
-    display: inline-block;
- 
     font-weight: 500;
     color: black;
-
-    margin: 41px 0 41px 800px;
-
+    float: right;
+    margin: 48px 120px 48px 0;
 }
 
 .home {
@@ -57,3 +58,62 @@
 .contact {
     margin-left: 60px;
 }
+
+.principal {
+    margin-left: 120px;
+}
+
+    .m-esquerdo {
+        float: left;
+        position: relative;
+
+
+    }
+
+        .main-text {
+            font-weight: 700;
+            font-size: 50px;
+            line-height: 49px;
+
+            margin-top: 280px;
+        }
+
+        .inf-text {
+            width: 710px;
+            height: 73px;
+
+            font-weight: 400;
+            font-size: 20px;
+            margin: 80px 0 60px 0;
+            color: #565656;
+        }
+
+        .main-button {
+            background: #2639ED;
+            border-radius: 60px;
+            padding: 20px 40px;
+            border: 0;
+            width: 250px;
+            height: 80px;
+
+            font-weight: 400;
+            font-size: 20px;
+            color: white;
+            letter-spacing: 0.065em;
+            position: absolute;
+            top: 580px;
+        }
+
+    .m-direito {
+        display: inline-block;
+        float: right;
+        margin-top: 116px;
+    }
+
+        .main-img {
+            width: 50vw;
+            height: auto;
+        }
+
+
+        
